Made some progress on the site: updated the Navigation bar, and added the bitclub logo to the corner.

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@
 
 /*Body Styling*/
 body{
+  margin: 0px;
   background-color: rgb(26, 26, 26);
 }
 
@@ -39,9 +40,46 @@ button {
 /*Navbar class. just a class for the navbar. don't expect me to make to many more comments like this...*/
 .navbar {
   background-color: rgb(53, 53, 53);
+  top: 0px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content:center;
+ 
+  margin: 0px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+ 
+  
+
+
+  
+}
+
+.navbar li{
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 
+
+
+/*This is an "overlap" class. since I might have multiple elements that will just overlap one thing, 
+would rather make a class that has that specification. This will just update the z-index of an element to one. */
+.overlap{
+  z-index: 1;
+}
+
+
+
+/*ID's---------------------------------*/
+
+/*Bitclub logo ID: this id exists becuase I need to specifically change the bitclub logo, and nothing else needs this styling.
+I should note that it takes it's height from the navbar. there is a better way to do this. */
+#bitclublogo{
+  font-size: 50px;
+  width: 300px;
+  height: 67.81px;
+  border-bottom-left-radius: 20px;
+  position:absolute;
+  top: 0px;
+}
