--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,10 @@ would rather make a class that has that specification. This will just update the
   z-index: 1;
 }
 
-
+.center{
+  margin-left: auto;
+  margin-right:auto;
+}
 
 /*ID's---------------------------------*/
 
@@ -77,9 +80,11 @@ would rather make a class that has that specification. This will just update the
 I should note that it takes it's height from the navbar. there is a better way to do this. */
 #bitclublogo{
   font-size: 50px;
-  width: 300px;
-  height: 67.81px;
+  width: 30%;
+  height: 20%;
   border-bottom-left-radius: 20px;
-  position:absolute;
-  top: 0px;
+  position: absolute;
+  left: 36%;
+  top: 20%
+
 }
