--- a/src/style.css
+++ b/src/style.css
@@ -45,11 +45,11 @@ the class below helps to visualize this. other than that it has no purpose
 
 @keyframes enlarge-button{
   from{
-    font-size: 30px;
+    font-size: 2vw;
     color: azure;
   }
   to{
-    font-size: 40px;
+    font-size: 2.5vw;
     color: rgb(0, 255, 0);
   }
 }
@@ -57,11 +57,11 @@ the class below helps to visualize this. other than that it has no purpose
 @keyframes register-button-hover{
   from{
     background-color: rgba(0, 0, 0, 0.349) ;
-    font-size: 30px;
+    font-size: 2vw;
   }
   to{
     background-color:  rgba(0, 255, 0, 0.5);
-    font-size: 32px;
+    font-size: 2.2vw;
   }
 }
 
@@ -146,7 +146,7 @@ button {
   border-radius: 3em;
   background-color: rgb(65, 65, 65);
   color: azure;
-  font-size: 30px;
+  font-size: 2vw;
   padding: 10px;
   border-style: none;
 }
@@ -444,7 +444,7 @@ page right now. */
   animation:normal;
   animation-name: pop-up-transition;
   animation-duration: 1s;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: ease-out;
   width: 100%;
   height: 100%;
   transition: all 1s;
@@ -482,14 +482,18 @@ page right now. */
   animation-duration: 0.5s;
   background-color:  rgba(0, 255, 0, 0.5);
   cursor: pointer;
-  font-size: 32px;
+  font-size: 2.2vw;
 
 }
 .modal-paragraph{
-  font-size: 24px;
+  font-size: 1.5vw;
 }
 .modal .ascend{
   top: -1100px;
+}
+
+.event-graphic{
+  max-width: 27vw;
 }
 
 
@@ -698,7 +702,7 @@ to reposition it in the right place.*/
   animation-name: enlarge-button;
   animation-direction:normal;
   animation-duration: 0.5s;
-  font-size: 40px;
+  font-size: 2.5vw;
   color: rgb(0, 255, 0);
   cursor: pointer;
 }
