--- a/src/style.css
+++ b/src/style.css
@@ -45,11 +45,11 @@ the class below helps to visualize this. other than that it has no purpose
 
 @keyframes enlarge-button{
   from{
-    font-size: 2vw;
+    font-size:2vw;
     color: azure;
   }
   to{
-    font-size: 2.5vw;
+    font-size:2.5vw;
     color: rgb(0, 255, 0);
   }
 }
@@ -244,7 +244,8 @@ You can change the height though! the "child" class here is needed to unskew the
   padding-right: 50px;
   padding-left: 50px;
   justify-content:center;
-  transform: translateX(50px) skew(40deg);
+  transform: translateX(75px) skew(40deg);
+  transition: 0.5s;
  
 }
 
@@ -282,7 +283,7 @@ You can change the height though! the "child" class here is needed to unskew the
 }
 
 .about-image{
-  max-width: 25%;
+  max-width: 100%;
   border-radius: 30px;
 }
 .officer-image{
@@ -312,7 +313,7 @@ You can change the height though! the "child" class here is needed to unskew the
 /*because i liked this officer style, I changed I making another to use everywhere. I'm too lazy to change its name on the other 
 page right now. */
 .fit-label{
-  font-size: 40px;
+  font-size: 3.6vw;
   width:fit-content;
   padding-left: 35px;
   padding-right: 35px;
@@ -349,6 +350,7 @@ page right now. */
   display: flex;
   flex-direction: row;
   justify-content:space-evenly;
+  transition: 0.5s;
  
 }
 
@@ -387,6 +389,7 @@ page right now. */
   width: 40vw;
   font-size: 1.6vw;
   margin-bottom: 5vw;
+  margin-top: 0;
   text-align: center;
 }
 
@@ -395,7 +398,7 @@ page right now. */
   margin: 0px;
   position:fixed;
   left:0px;
-  top: 300px;
+  top: 13vw;
   background-color: rgba(0, 0, 0, 0.349);
   border-radius: 20px;
   width: auto;
@@ -405,11 +408,11 @@ page right now. */
 
 .officer-navbar h3{
   margin:0px;
-  
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top:20px;
-    padding-bottom: 20px;
+   font-size: 2vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-top:1vw;
+    padding-bottom: 1vw;
     transition-duration: 0.5s;
 }
 
@@ -430,7 +433,7 @@ page right now. */
 
 /*I made this because I did not want to continue making id's for headers.*/
 .large-header{
-  font-size: 60px;
+  font-size: 4.5vw;
 }
 
 .rounded-edge{
@@ -466,6 +469,7 @@ page right now. */
   width: 60vw;
   height: auto;
   justify-items: left;
+
 }
 .modal-box{
   display: flex;
@@ -500,6 +504,26 @@ page right now. */
   max-width: 27vw;
 }
 
+.event-list{
+  display: flex;
+  flex-direction:column;
+  padding: 0px;
+ }
+ 
+ .event-list :hover{
+   animation-name: enlarge-button;
+   animation-direction:normal;
+   animation-duration: 0.5s;
+   font-size: 2.5vw;
+   color: rgb(0, 255, 0);
+   cursor: pointer;
+ }
+
+
+.about-div{
+  justify-content: start;
+}
+
 
 /*ID's---------------------------------*/
 
@@ -507,6 +531,7 @@ page right now. */
 it has a max width and is meant to be put in an "image container" */
 #bitclublogo{
   max-width: 40%;
+  transition: 0.5s;
 }
 /*promoImg: t50his is for the promotional image on the home page... it will be multiple images combined into to one to emulate a 
 "scrolling" effect.
@@ -516,11 +541,10 @@ all images need to be the same width and height before they are combined.*/
   border-radius: 30px;
 }
 
-#middleDiv{
-  
-  /*transform: translateX(60px);*/
-  margin-left: 6vw;
+#rightDiv{
+  max-width: 22%;
 }
+
 
 #nextEventHeader{
   font-size: 4vw;
@@ -539,7 +563,7 @@ all images need to be the same width and height before they are combined.*/
 }
 
 #newsImg{
-  width: 100%;/*perfect width for this image.*/
+  max-width: 100%;/*perfect width for this image.*/
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
 }
@@ -548,7 +572,7 @@ all images need to be the same width and height before they are combined.*/
 to reposition it in the right place.*/
 
 #quoteImg{
-  width: 100%;
+  max-width: 100%;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
 }
@@ -556,6 +580,7 @@ to reposition it in the right place.*/
   margin: 0px;
   padding: 0px;
   justify-content: right;
+ 
 }
 #quoteDescription{
   width: fit-content;
@@ -563,55 +588,27 @@ to reposition it in the right place.*/
 
 
 /*About Page tags-----------------------------*/
-#aboutHeader{
-  font-size: 80px;
-  margin-top:120px;
-  margin-bottom: 20px;
+#about-header{
+  font-size: 6vw;
 }
 
-#top-right-about-image{
-  display: flex;
-  position: absolute;
-  justify-content: right;
-  right: 0px;
-  top: 85px;
-}
-
-#top-left-about-image{
-  display: flex;
-  position: absolute;
-  left: 0px;
-  top: 85px;
-  justify-content: left;
-}
 #bottom-left-about-image{
-  display: flex;
-  position: absolute;
-  left: 0px;
-  top: 450px;
-  justify-content: left;
+  max-width: 68%;
 }
-#bottom-right-about-image{
-  display: flex;
-  position: absolute;
-  justify-content: right;
-  right: 0px;
-  top: 470px;
-}
+
 
 #about-description{
-  display: flex;
   text-align: center;
-  height: auto;
-  padding: 10px;
-  max-width: 40%;
-  font-size: 25px;
-  font-weight: 500;
+  font-size: 1.4vw;
+  font-weight: 700;
+  width: 50vw;
 }
 
 
 
-/*Officer Page tags*/
+
+
+/*Officer Page tags-------------------*/
 #officer-header{
   font-size: 6vw;
 }
@@ -664,39 +661,27 @@ to reposition it in the right place.*/
 
 /*Event page id's------------------------------------------*/
 #events-label{
-  font-size: 90px;
+  font-size: 7vw;
+
+}
+#next-event-div{
+  width: 26vw;
+}
+#recap-image{
+  max-width: 40%;
+  transition: 0.5s;
 }
 
-#next-event-banner{
-  position: absolute;
-  top: 25%;
+
+
+#event-container-1{
+  justify-content: flex-start;
 }
 
 #next-event-button{
-  position: absolute;
-  top: 35%;
+  margin-top: 0;
+  margin-bottom: 0;
 }
-
-#recap-image{
-  max-width: 40%;
-}
-
-#event-list{
- display: flex;
- flex-direction:column;
- padding: 0px;
-}
-
-#event-list :hover{
-  animation-name: enlarge-button;
-  animation-direction:normal;
-  animation-duration: 0.5s;
-  font-size: 2.5vw;
-  color: rgb(0, 255, 0);
-  cursor: pointer;
-}
-
-
 
 /*Event Graphics*/
 #kickOffGraphic{
@@ -711,27 +696,72 @@ to reposition it in the right place.*/
 
 /*media queries*/
 /*Navigation Bar----------------------------------*/
-@media (max-width: 750px) {
 
-  .navbar li{
-    padding-left: 30px;
-    padding-right:30px;
+
+
+
+
+
+
+
+
+/*News and Quote Divs*/
+@media (max-width: 1175px){
+    .right-slanted-light-grey-banner {
+      transform: translateX(60px) skew(40deg)
+    }
   }
-}
 
+@media (max-width: 1100px){
 
-@media (max-width: 680px){
-  .navbar li{
-    padding-left: 10px;
-    padding-right: 10px;
+  .description-box{
+    font-size: 1.2vw;
+  }
+  /*I'll have to comment this out later. so I'll organize what styles apply to what and put all the media 
+  queries in order. Instead of making more, I should use the
+  cs principle of 'resuse' This style here is for the events page.*/
+  #recap-image{
+    max-width: 70%;
   }
 
-}
+  /*this is for the short description underneath the recap-image on the events page.*/
+  .fit-description{
+    font-size: 3vw;
+    width: 80%;
+  }
+
+  /*this is for the event buttons that are underneath the 'All events in order' label*/
+  
+
+  #next-event-button{
+    font-size: 1.8vw;
+  }
+
+ /*this style is for the contianer on the about page holding all the elements*/
+  #middle-about-div{
+    max-width: 50%;
+  }
+  #about-description{
+    width: 30vw;
+  }
 
 
-@media (max-width: 520px){
-  .navbar h2{
-    font-size: 3.7vw;
+  @keyframes enlarge-button{
+    from{
+      font-size:3vw;
+      color: azure;
+    }
+    to{
+      font-size:3.5vw;
+      color: rgb(0, 255, 0);
+    }
+  }
+
+  .event-list :hover{
+    font-size: 3.5vw;
+  }
+  .event-button{
+    font-size: 3vw;
   }
 }
 
@@ -743,14 +773,115 @@ Slanted Banner*/
     max-width: 85%;
   }
   .right-slanted-light-grey-banner h1{
-    font-size: 30px;
+    font-size: 1.5vw;
+  }
+  .right-slanted-light-grey-banner{
+    padding-left: 20px;
+    padding-right: 20px;
+    transform: translateX(30px) skew(40deg);
+  }
+
+
+}
+
+  @media (max-width: 1000px){
+    .right-slanted-light-grey-banner{
+      transform: translateX(50px) skew(40deg)
+    }
+
+    .modal-content{
+      width: 80vw;
+    }
+    .event-graphic{
+      max-width: 40vw;
+    }
+    .modal-paragraph{
+      font-size: 2vw;
+    }
+  }
+
+@media (max-width: 890px){
+  .right-slanted-light-grey-banner{
+    transform: translateX(30px) skew(40deg)
+  }
+
+  /*this is for the next event banner on the events page.*/
+  #next-event-button{
+    font-size: 1.8vw;
   }
 }
 
 
-/*News and Quote Divs*/
-@media (max-width: 1400px){
+@media (max-width: 750px) {
+
+  .navbar li{
+    padding-left: 30px;
+    padding-right:30px;
+  }
+
+  /*this style is for the next event banner on the events page.*/
+  #next-event-banner h1{
+    font-size: 2.8vw;
+  }
+  #next-event-banner{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  #about-description{
+    font-size: 2vw;
+    width: fit-content;
+  }
+
+  #about-header{
+    font-size: 7vw;
+  }
+  #about-container{
+    flex-direction: column;
+   
+  }
+  #middle-about-div{
+    flex-direction: column;
+    max-width: 100%
+  }
+  #bottom-left-about-image{
+    max-width: 100%;
+  }
+  .about-image{
+    border-radius: 10px;
+  }
+  .about-div{
+    flex-direction: row;
+    justify-content: center;
+
+  }
+  
+  /*this style is for the modal content.*/
+  .modal-paragraph{
+    font-size: 2vw;
+  }
+  .event-graphic{
+    max-width: 35vw
+  }
 
 }
 
 
+@media (max-width: 680px){
+  .navbar li{
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  
+  #about-description{
+    font-size: 3vw;
+  }
+
+}
+
+
+@media (max-width: 520px){
+  .navbar h2{
+    font-size: 3.7vw;
+  }
+}
